Thu Feb 24 09:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/*S.{h,cpp,inl}:
        * orbsvcs/orbsvcs/IFRService/*S_T.{h,cpp,inl}:
          Regenerated

Wed Feb 23 15:47:31 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_sh.cpp:

          Commented out code generation that has been recently
          commented out in the corresponding interface visitor,
          due to the skeleton refactoring work.

Wed Feb 23 14:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Servant_Upcall.h:
          Fixed compile error in RTPortableServer library with SunForte,
          explicitly use :: before TAO_RT_Collocation_Resolver

Wed Feb 23 10:50:43 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/EventChannelFactory.cpp:

          Remove the call to shutdown the ORB when destroying the
          TAO_Notify_EventChannelFactory.  It is not necessary and is not
          necessarily what the user wants.

        * orbsvcs/tests/Notify/XML_Persistence/main.cpp:

          Fixed a bug in the argument processing code and deactivated the
          supplier and consumer before destroying the
          TAO_Notify_EventChannelFactory.

        * orbsvcs/tests/Notify/XML_Persistence/run_test.pl:

          Switch to a single process instead of doing the test in two parts.

Wed Feb 23 01:59:20 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tao/Exception.h:

          Reverted change that made constructors protected.  MSVC++ 7.1
          cannot catch CORBA::Exception subclasses through a pointer or
          references to CORBA::Exception otherwise.

Wed Feb 23 01:03:30 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tao/PortableServer/Fixed_Array_SArgument_T.h:
        * tao/PortableServer/Fixed_Array_SArgument_T.inl:
        * tao/PortableServer/Var_Array_SArgument_T.cpp: